# VSTprompter

./: CMakeLists.txt  README.md
.github/workflows/: build-macos.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TeleprompterComponent.cpp  TeleprompterComponent.h
